Rajout données SEO 1

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
@@ -8,6 +8,9 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
+	// SEO
+	<title>Nina Carducci - Photographe Professionnel</title>
+	<meta name="description" content="Nina Carducci, photographe à Bordeaux. Je vous propose des services de retouches photos, création d'album photos ou encore des shootings photos">
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
@@ -15,7 +18,7 @@
 </head>
 <body>
 <div class="top-header">
-	<h3 class="name">Nina Carducci</h3>
+	<h2 class="name">Nina Carducci</h2>
 	<div class="nav">   
 		<ul>
 			<li><a href="#about">À propos</a></li>
@@ -154,5 +157,15 @@
 		</div>
 	</div>
 </div>
+<footer>
+	<div class="centered">
+		<p>
+			Nina Carducci - Photographe Professionnel </br>
+			68 avenue Alsace-Lorraine, 33200 Bordeaux </br>
+			Téléphone : 05 56 67 78 89 </br>
+			Du lundi au vendredi - 10h à 19h
+		</p>
+	</div>
+</footer>
 </body>
 </html>
