explicit height et width image principale

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<li><a href="#services">Service</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-							target="_blank"><img src="assets/images/instagram.webp" alt="Logo Instagram"></a></li>
+							target="_blank"><img src="assets/images/instagram.webp" alt="Logo Instagram" height="20px" width="20px"></a></li>
 				</ul>
 			</div>
 		</div>
@@ -115,7 +115,7 @@
 
 	<div id="about">
 		<div class="picture left">
-			<img src="./assets/images/nina.webp" alt="Nina Carducci">
+			<img src="./assets/images/nina.webp" alt="Nina Carducci" height="400px" width="400px">
 		</div>
 		<div id="about-me">
 			<h2 class="about-me__title">A propos de moi</h2>
@@ -239,7 +239,7 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.webp" alt="Appareil photo">
+				<img src="./assets/images/camera.webp" alt="Appareil photo" height="400px" width="400px">
 			</div>
 		</div>
 	</div>
