--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
+					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" height="500" width="1200"
 						alt="Homme japonais traversant un passage piéton">
 				</div>
 				<div class="carousel-item">
