--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" height="880" width="1900"
+					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" height="100%" width="100%"
 						alt="Homme japonais traversant un passage piéton">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100 height="880" width="1900"
+					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" height="100%" width="100%"
 						alt="Foule">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100 height="880" width="1900"
+					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" height="100%" width="100%"
 						alt="Couple lors d'un mariage">
 				</div>
 			</div>
@@ -115,7 +115,7 @@
 
 	<div id="about">
 		<div class="picture left">
-			<img src="./assets/images/nina.webp" alt="Nina Carducci" height="400px" width="400px">
+			<img src="./assets/images/nina.webp" alt="Nina Carducci" height="100%" width="100%">
 		</div>
 		<div id="about-me">
 			<h2 class="about-me__title">A propos de moi</h2>
@@ -239,7 +239,7 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.webp" alt="Appareil photo" height="400px" width="400px">
+				<img src="./assets/images/camera.webp" alt="Appareil photo" height="100%" width="100%">
 			</div>
 		</div>
 	</div>
