--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" height="100%" width="100%"
+					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" height="auto" width="100%"
 						alt="Homme japonais traversant un passage piéton">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" height="100%" width="100%"
+					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" height="auto" width="100%"
 						alt="Foule">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" height="100%" width="100%"
+					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" height="auto" width="100%"
 						alt="Couple lors d'un mariage">
 				</div>
 			</div>
@@ -239,7 +239,7 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.webp" alt="Appareil photo" height="100%" width="100%">
+				<img src="./assets/images/camera.webp" alt="Appareil photo" height="auto" width="100%">
 			</div>
 		</div>
 	</div>
