--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 	<meta property="og:type" content="website">
 	<meta property="og:image" content="./assets/images/nina.webp">
 	<meta property="og:url" content="https://sasoste.github.io/">
-	<meta property="og:description" content="Nina Carducci, photographe professionnelle située à Bordeaux pour vos shootings, retouches et création d'albums">
+	<meta property="og:description"
+		content="Nina Carducci, photographe professionnelle située à Bordeaux pour vos shootings, retouches et création d'albums">
 	<!--Schema.org-->
 	<script type="application/ld+json">
 		{
@@ -50,7 +51,7 @@
 			"latitude": "44.84658439144576",
 			"longitude": "-0.6065540341536934"
 		  },
-		  "url": "https://sasoste.github.io",
+		  "url": "https://sasoste.github.io"
 		}
 		</script>
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
@@ -71,7 +72,8 @@
 					<li><a href="#services">Service</a></li>
 					<li><a href="#contact">Contact</a></li>
 					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
-							target="_blank"><img src="assets/images/instagram.webp" alt="Logo Instagram" height="20px" width="20px"></a></li>
+							target="_blank"><img src="assets/images/instagram.webp" alt="Logo Instagram" height="20px"
+								width="20px"></a></li>
 				</ul>
 			</div>
 		</div>
