--- a/index.html
+++ b/index.html
@@ -90,29 +90,40 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
-						alt="Homme japonais traversant un passage piéton">
+					<picture>
+						<source media="(max-width: 1000px)"
+							srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash1000p.webp">
+						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
+							alt="Homme japonais traversant un passage piéton">
+					</picture>
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100"
-						alt="Foule">
+					<picture>
+						<source media="(max-width: 1000px)"
+							srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash1000p.webp">
+						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100"
+							alt="Foule">
+					</picture>
 				</div>
-				<div class="carousel-item">
+				<picture>
+					<source media="(max-width: 1000px)"
+						srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-1000p.webp">
 					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100"
 						alt="Couple lors d'un mariage">
-				</div>
+				</picture>
 			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-				data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-				data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
 		</div>
+		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+			data-bs-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Previous</span>
+		</button>
+		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+			data-bs-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Next</span>
+		</button>
+	</div>
 	</div>
 
 	<div id="about">
