--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 			"latitude": "44.84658439144576",
 			"longitude": "-0.6065540341536934"
 		  },
-		  "url": "https://sasoste.github.io"
+		  "url": "https://sasoste.github.io",
+		  "priceRange": "€50 - €400"
 		}
 		</script>
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
